--- a/css/style.css
+++ b/css/style.css
@@ -152,10 +152,15 @@ input, select {
   font-weight: 900;
   line-height: 25px;
   font-size: 15px;
+  transition: all 0.2s ease-in-out;
+}
+
+.btn:hover{
+  background-color: #e9bd0e;
 }
 .header__img{
   flex:1;
-  width: 519px;
+  max-width: 519px;
 }
 
 .what{
@@ -174,7 +179,7 @@ h2{
 .section__contant{
   margin: 80px 0 0 0;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   font-size: 15px;
   flex-wrap: wrap;
@@ -183,7 +188,6 @@ h2{
 .contant__block{
   flex: 1;
   text-align: center;
-  margin-right: 50px;
   
 }
 
@@ -219,6 +223,12 @@ h2{
   padding-left: 20px;
   outline: 0;
   cursor: pointer;
+}
+
+.form__window:hover{
+  border: 0.5px solid #164D7A;
+  font-size: 17px;
+  box-shadow: 1px 3px #000;
 }
 
 .form-btn{
